<resources>
    <string name="app_name">Always create user</string>
    <string name="xposed_desc">An Xposed Framework module that bypasses Android\'s user/profile creation limits\n<b>Caution</b>: Disabling or uninstalling the module with a <b>Device Owner</b> present will <b>automatically delete the Private Space</b> after rebooting!!!</string>

    <string name="module_not_loaded">Module not loaded</string>
    <string name="will_not_save">Any changes you make will not be saved</string>

    <string name="category_general">General</string>
    <string name="enable_module_title">Enable Module</string>
    <string name="enable_module_summary">Master switch to enable/disable all module functions.</string>

    <string name="category_settings">Settings</string>
    <string name="hook_isCreationOverrideEnabled_title">Bypass isCreationOverrideEnabled</string>
    <string name="hook_isCreationOverrideEnabled_summary">Enable this to bypass user creation restrictions (Android 14+)</string>
    <string name="hook_canAddMoreProfilesToUser_title">Bypass canAddMoreProfilesToUser</string>
    <string name="hook_canAddMoreProfilesToUser_summary">Enable this to bypass profile limits (Android 11–13)</string>
    <string name="hook_canAddMoreManagedProfiles_title">Bypass canAddMoreManagedProfiles</string>
    <string name="hook_canAddMoreManagedProfiles_summary">Enable this to bypass managed profile limits (Android 6–10)</string>
    <string name="hook_isUserLimitReached_summary">Enable this to bypass user limit checks (Android 7–13)</string>
    <string name="hook_isUserLimitReached_title">Bypass isUserLimitReached</string>
    <string name="hook_isUserLimitReachedLocked_summary">Enable this to bypass user limit checks (Android 4.2–6)</string>
    <string name="hook_isUserLimitReachedLocked_title">Bypass isUserLimitReachedLocked</string>
    <string name="hook_enforceCanSetDeviceOwnerLocked_summary">Allow the app to be forcibly set as the Device Owner without deleting users or accounts.</string>
    <string name="hook_enforceCanSetDeviceOwnerLocked_title">Force set Device owner</string>
    <string name="hook_enforceCanSetProfileOwnerLocked_summary">Allow the app to be forcibly set as the Profile Owner without deleting users or accounts.</string>
    <string name="hook_enforceCanSetProfileOwnerLocked_title">Force set Profile owner</string>
    <string name="deviceowner">Device Owner</string>
    <string name="misc_title">Disable Device Owner Restrictions</string>
    <string name="misc_summary">Note: Please restart your device after modifying these options to apply the changes.</string>
    <string name="bypass_no_add_user_title">Allow User Creation</string>
    <string name="bypass_no_add_user_summary">The no_add_user is a user restriction on Android that prevents the user creation.</string>
    <string name="bypass_no_add_managed_profile_title">Allow creating work profile</string>
    <string name="bypass_no_add_managed_profile_summary">The no_add_managed_profile is a user restriction on Android that prevents the creation of work profiles.</string>
    <string name="bypass_no_add_private_profile_title">Allow creating private profile</string>
    <string name="bypass_no_add_private_profile_summary">The no_add_private_profile is a user restriction on Android that prevents the creation of private space.</string>
    <string name="bypass_no_add_clone_profile_title">Allow creating clone profile</string>
    <string name="bypass_no_add_clone_profile_summary">The no_add_clone_profile is a user restriction on Android that prevents the creation of cloned app profiles (app cloning/dual apps).</string>

</resources>